Fix: Removed scrolling behaviour of the overlay when cart is opened and improved the z-index of the shop page componenets

--- a/src/Styles/CategorySlider.css
+++ b/src/Styles/CategorySlider.css
@@ -10,6 +10,7 @@
 	justify-content: center;
 	align-items: center;
 	margin-bottom: 10px;
+	z-index: 0;
 }
 
 /* Slider Container */
