--- a/src/Styles/Shop.css
+++ b/src/Styles/Shop.css
@@ -28,7 +28,7 @@
 	flex-direction: column;
 	align-items: stretch;
 	position: relative;
-	z-index: 1;
+	z-index: 0;
 	padding: 1rem 0rem;
 	gap: 1rem;
 	box-sizing: border-box;
@@ -930,7 +930,7 @@
 	width: 100%;
 	box-sizing: border-box;
 	position: relative;
-	z-index: 5;
+	z-index: 0;
 }
 .search-form {
 	display: flex;
@@ -1159,7 +1159,7 @@
 	}
 	.search-bar-container {
 		padding: 0;
-		z-index: 5;
+		z-index: 0;
 	}
 	.search-form {
 		max-width: 100%;
